--- a/ActivityIndicator/Base.lproj/Main.storyboard
+++ b/ActivityIndicator/Base.lproj/Main.storyboard
@@ -29,18 +29,40 @@
                                     <action selector="buttonStop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FA6-Wi-wHh"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7E-dg-nFj">
+                                <rect key="frame" x="8" y="676" width="398" height="30"/>
+                                <state key="normal" title="ShowAlert"/>
+                                <connections>
+                                    <action selector="showAlert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PeX-TU-BOL"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2u-5P-mvv">
+                                <rect key="frame" x="8" y="668" width="398" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="SFT-Wh-T21" firstAttribute="top" secondItem="d7E-dg-nFj" secondAttribute="bottom" constant="8" id="2SB-24-yTm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SFT-Wh-T21" secondAttribute="trailing" constant="8" id="JS3-oq-FBS"/>
                             <constraint firstItem="SFT-Wh-T21" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="U4R-Ry-Pv8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="C2u-5P-mvv" secondAttribute="trailing" constant="8" id="VED-cc-uTi"/>
                             <constraint firstItem="gzY-W1-1Qt" firstAttribute="top" secondItem="SFT-Wh-T21" secondAttribute="bottom" constant="8" id="d7B-Qj-Shh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gzY-W1-1Qt" secondAttribute="bottom" constant="80" id="lZ3-mQ-uE4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gzY-W1-1Qt" secondAttribute="trailing" constant="8" id="mPN-OZ-ZzA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d7E-dg-nFj" secondAttribute="trailing" constant="8" id="sMy-gD-VV1"/>
+                            <constraint firstItem="d7E-dg-nFj" firstAttribute="top" secondItem="C2u-5P-mvv" secondAttribute="bottom" constant="8" id="uUR-DK-eve"/>
                             <constraint firstItem="gzY-W1-1Qt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="zFA-fw-DFl"/>
+                            <constraint firstItem="d7E-dg-nFj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="zYy-dS-JM7"/>
+                            <constraint firstItem="C2u-5P-mvv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="zz8-wk-elK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="lblText" destination="C2u-5P-mvv" id="7Iw-Dr-jUn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
