--- a/ActivityIndicator/Base.lproj/Main.storyboard
+++ b/ActivityIndicator/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="SFT-Wh-T21" firstAttribute="top" secondItem="d7E-dg-nFj" secondAttribute="bottom" constant="8" id="2SB-24-yTm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SFT-Wh-T21" secondAttribute="trailing" constant="8" id="JS3-oq-FBS"/>
